| Bug #18414 | Timeout in ABORT handling with more that 32 ops can yield NF | ||
|---|---|---|---|
| Submitted: | 22 Mar 2006 10:47 | Modified: | 27 Mar 2006 15:58 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[22 Mar 2006 10:47]
Jonas Oreland
[22 Mar 2006 11:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4012
[24 Mar 2006 13:28]
Jonas Oreland
pushed into 5.1.8
[27 Mar 2006 12:12]
Jonas Oreland
pushed into 5.0.20
[27 Mar 2006 14:04]
Jonas Oreland
pushed into 4.1.19
[27 Mar 2006 15:58]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 4.1.19, 5.0.20, and 5.1.8 changelogs. Closed.
